# agentwrit-python

./: .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FLOW.md  LICENSE  MEMORY.md  README.md  REJECT-FIX_NOW.md  check_ceiling.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: branch-cleanup.yml  ci.yml  docker-demos.yml  docker-medassist.yml  pypi-publish.yml
.plans/: 2026-04-01-demo-app-plan.md  2026-04-01-demo-app-v3-plan.md  2026-04-01-hitl-removal-api-alignment-plan.md  2026-04-02-sdk-broker-gap-review.md  2026-04-04-prd-demo-and-sdk-gaps.md  2026-04-05-v0.3.0-phase2-cache-correctness-plan.md  PROMPT.md  SPEC-TEMPLATE.md  tracker.jsonl  v0.3.0-rewrite-implementation-plan.md
.plans/ARCHIVE/: 2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶d̶e̶s̶i̶g̶n̶-̶v̶2̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶d̶e̶s̶i̶g̶n̶-̶v̶3̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶d̶e̶s̶i̶g̶n̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶p̶l̶a̶n̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶s̶p̶e̶c̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶d̶e̶m̶o̶-̶a̶p̶p̶-̶v̶3̶-̶p̶l̶a̶n̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶e̶i̶g̶h̶t̶-̶b̶y̶-̶e̶i̶g̶h̶t̶-̶s̶c̶e̶n̶a̶r̶i̶o̶s̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶h̶i̶t̶l̶-̶r̶e̶m̶o̶v̶a̶l̶-̶a̶p̶i̶-̶a̶l̶i̶g̶n̶m̶e̶n̶t̶-̶p̶l̶a̶n̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶h̶i̶t̶l̶-̶r̶e̶m̶o̶v̶a̶l̶-̶a̶p̶i̶-̶a̶l̶i̶g̶n̶m̶e̶n̶t̶-̶s̶p̶e̶c̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶1̶-̶w̶h̶y̶-̶t̶r̶a̶d̶i̶t̶i̶o̶n̶a̶l̶-̶i̶a̶m̶-̶f̶a̶i̶l̶s̶.md  2̶0̶2̶6̶-̶0̶4̶-̶0̶4̶-̶p̶r̶d̶-̶d̶e̶m̶o̶-̶a̶n̶d̶-̶s̶d̶k̶-̶g̶a̶p̶s̶.md  S̶I̶M̶P̶L̶E̶-̶D̶E̶S̶I̶G̶N̶.md
.plans/designs/: 2026-04-01-demo-app-design-v2.md  2026-04-01-demo-app-design-v3.md  2026-04-01-demo-app-design.md  2026-04-01-eight-by-eight-scenarios.md  2026-04-01-why-traditional-iam-fails.md  2026-04-04-v0.3.0-sdk-design.md  2026-04-05-agentauth-first-principles.md  SIMPLE-DESIGN.md
.plans/specs/: 2026-04-01-demo-app-spec.md  2026-04-01-hitl-removal-api-alignment-spec.md  2026-04-05-v0.3.0-phase2-cache-correctness-spec.md  2026-04-05-v0.3.0-phase3-result-types-spec.md  2026-04-05-v0.3.0-phase4-missing-endpoints-spec.md  2026-04-05-v0.3.0-phase5-ergonomics-spec.md  2026-04-05-v0.3.0-phase6-observability-spec.md  2026-04-05-v0.3.0-phase7-docs-release-spec.md  2026-04-07-demo-app-spec.md  2026-04-08-medassist-demo-spec.md  NEW_SPECS_TO_USED.md  SPEC_ADR.md
broker/: BACKLOG.md  docker-compose.yml
broker/docs/: api.md
broker/scripts/: stack_down.sh  stack_up.sh
demo/: .env.example  BEGINNERS_GUIDE.md  Dockerfile  PRESENTERS_GUIDE.md  README.md  app.py  config.py  entrypoint.sh  setup.py
demo/data/: formulary.json  patients.json  patients.py
demo/pipeline/: runner.py  tools.py
demo/routes/: api.py  pages.py
demo/static/: app.js  style.css
demo/templates/: audit.html  base.html  encounter.html  operator.html
demo2/: .env.example  Dockerfile  README.md  app.py  config.py  data.py  entrypoint.sh  pipeline.py  setup.py  tools.py
demo2/static/: style.css
demo2/templates/: index.html
docs/: api-reference.md  concepts-agent-cryptographic-identity.md  concepts.md  developer-guide.md  getting-started.md  hitl-implementation-guide.md  sample-app-mini-max.md  sample-apps-broker-setup.md  testing-guide.md  vision-transcript-2026-04-09.md
docs/sample-apps/: 01-order-worker.md  02-data-pipeline.md  03-patient-guard.md  04-moderation-delegation.md  05-deploy-chain.md  06-trading-agent.md  07-incident-response.md  08-audit-scanner.md  README.md
examples/hitl-demo/: app.py
src/agentauth/: __init__.py  _transport.py  agent.py  app.py  app_types.py  client.py  crypto.py  errors.py  models.py  orchestrator.py  retry.py  scope.py  token.py
src/agentwrit/: __init__.py  _transport.py  agent.py  app.py  app_types.py  errors.py  models.py  orchestrator.py  scope.py
tests/: LIVE-TEST-TEMPLATE.md  TEST-TEMPLATE.md  conftest.py
(+102 files in other folders)
