[project]
name = "agentwrit"
version = "0.3.0"
description = "Python SDK for the AgentWrit broker -- ephemeral scoped credentials for AI agents via Ed25519 challenge-response"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentwrit"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["tests/sdk-core", "tests/integration", "demo", "demo2"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["cryptography.*", "httpx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running AgentWrit broker in Docker",
]

[tool.uv]
dev-dependencies = [
    "fastapi>=0.135.3",
    "jinja2>=3.1.6",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
    "flask>=3.0.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
]
